--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif32
 board = freenove_esp32_s3_wroom
 framework = arduino
+
+[env:native]
+platform = native
+test_framework = unity
+lib_deps = Morse
